# pp18-video-tools_qml

./: .gitattributes  .gitignore  AGENT_HANDOFF.md  CMakeLists.txt  README.md  build-mac-arm.command  build-win-x64.bat
.github/workflows/: ci.yml  release.yml
src/: main.cpp  resources.qrc
src/app/: AppController.cpp  AppController.h  VideoFileModel.cpp  VideoFileModel.h
src/assets/icons/: app-icon.icns  app-icon.rc.in
src/platform/: NativeFileDialog.cpp  NativeFileDialog.h  NativeFileDialog_mac.mm  NativeFolderDialog.cpp  NativeFolderDialog.h  NativeFolderDialog_mac.mm
src/qml/: AppFonts.qml  AppStyle.qml  LogWindow.qml  Main.qml  PlayerWindow.qml  SettingsWindow.qml  qml.qrc  resources.qrc
src/qml/components/: ActionToggle.qml  ContextMenuItem.qml  ContextMenuSeparator.qml  PlayerButton.qml  PlayerCombo.qml  PlayerControls.qml  TaskCard.qml  TaskFixedSide.qml  TaskLine.qml  TaskSide.qml  TaskSourceSide.qml  ToolbarButton.qml  ToolbarCheck.qml  ToolbarSelect.qml
src/services/: FfmpegBatchService.cpp  FfmpegBatchService.h  FfmpegPreviewService.cpp  FfmpegPreviewService.h  HandbrakePreviewService.cpp  HandbrakePreviewService.h  TelegramController.cpp  TelegramController.h  TelegramService.cpp  TelegramService.h  UpdateService.cpp  UpdateService.h
